<resources>
    <string name="app_name">DailyNews.</string>
    <string name="splash_screen_img">splash_screen_img</string>
    <string name="news_title_text">First Nations look to buy equity in pipeline to have say in project\'s future</string>
    <string name="category_list_text">Development</string>
    <string name="news_date_text">March 13 2018</string>
    <string name="news_author_text">John Doe</string>
    <string name="writtenBy">Written by: </string>
    <string name="placeholder">" "</string>
    <string name="title">title</string>
    <string name="author">author</string>
    <string name="noNews">No news found.
        Please come back later.</string>
    <string name="notGetJson">Couldn\'t get json from server.</string>
    <string name="parsingError">Json parsing error: </string>
    <string name="image_news">image_news</string>
    <string name="thumbnail">thumbnail</string>
    <string name="response">response</string>
    <string name="results">results</string>
    <string name="webTitle">webTitle</string>
    <string name="webPublicationDate">webPublicationDate</string>
    <string name="sectionName">sectionName</string>
    <string name="webUrl">webUrl</string>
    <string name="tags">tags</string>
    <string name="fields">fields</string>
    <string name="T">T</string>
    <string name="Z">Z</string>
    <string name="ı">ı</string>
    <string name="i">i</string>
    <string name="noInternet">No internet connection found.
        Please check your internet connection and restart the app. </string>
    <string name="warning">warning</string>
    <string name="raw_url">http://content.guardianapis.com/search?</string>
    <string name="category_title">Select by News Category</string>
    <string name="all">all</string>
    <string name="page_title">Select by News Number</string>
    <string name="default_page_number">20</string>
    <string name="us">us</string>
    <string name="usNews">US news</string>
    <string name="world">world</string>
    <string name="lifeAndStyle">Life and style</string>
    <string name="life">life</string>
    <string name="artAndDesign">Art and design</string>
    <string name="art">art</string>
    <string name="membership">Membership</string>
    <string name="film">Film</string>
    <string name="fashion">Fashion</string>
    <string name="travel">Travel</string>
    <string name="music">Music</string>
    <string name="televisionAndRadio">Television &amp; radio</string>
    <string name="television">television</string>
    <string name="tv">tv</string>
    <string name="and">and</string>
    <string name="culture">Culture</string>
    <string name="ukNews">UK news</string>
    <string name="uk">uk</string>
    <string name="science">Science</string>
    <string name="technology">Technology</string>
    <string name="society">Society</string>
    <string name="australianNews">Australia news</string>
    <string name="australia">australia</string>
    <string name="education">Education</string>
    <string name="stage">Stage</string>
    <string name="inequality">Inequality</string>
    <string name="news">News</string>
    <string name="media">Media</string>

</resources>
