<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/listColorBackground"
    android:orientation="vertical"
    android:padding="25dp">

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/newsImageDimen"
        android:contentDescription="@string/image_news"
        android:scaleType="centerCrop">
    </ImageView>

    <TextView
        android:id="@+id/text_news_title"
        style="@style/ListNewsTitle"
        tools:text="@string/news_title_text" />

    <TextView
        android:id="@+id/text_news_author"
        style="@style/ListNewsAuthor"
        tools:text="@string/news_author_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_news_date"
            style="@style/ListNewsDateSection"
            android:layout_weight="1"
            tools:text="@string/news_date_text" />

        <TextView
            android:id="@+id/text_news_section"
            style="@style/ListNewsDateSection"
            android:layout_weight="2"
            android:ellipsize="end"
            android:gravity="end"
            android:textColor="@color/colorAccent"
            tools:text="@string/category_list_text" />

    </LinearLayout>
</LinearLayout>